[package]
name = "packet_racers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
uuid =  { version = "1.3", features = ["v4"] }
async-trait = "0.1"
