[package]
name = "packet_racers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
log = "0.4"
uuid =  { version = "1.3", features = ["v4"] }

[features]
default = ["protocol-all", "logging"]

network = []

protocol-udp = []
protocol-tcp = []
protocol-guaranteed-udp = []
protocol-all = ["protocol-udp", "protocol-tcp", "protocol-guaranteed-udp"]

logging = []
